# discord_rss

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt  test.py  urls.db
.github/workflows/: main_discord-rss-bot.yml
modules/: cmd.py  db_operate.py  parse_rss.py
src/discord_rss/: env_exam  main.py  test.py
src/discord_rss/modules/: cmd.py
